[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/actor/enemies/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/actor/enemies/squares/EnemySquare.gd" type="Script" id=2]
[ext_resource path="res://Assets/graphics/actor/enemies/square.png" type="Texture" id=3]
[ext_resource path="res://src/components/ShootComponent.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/actor/enemies/Cercles/EnemyCercle.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/components/PlayerDetectorComponent.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 24 )

[node name="EnemySquare" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="HealthComponent" parent="." index="0"]
health = 3
invincible_time = 0.1

[node name="MovementComponent" parent="." index="1"]
max_speed = 100

[node name="ShootComponent" parent="." index="2" instance=ExtResource( 4 )]
ProjectileScene = ExtResource( 5 )

[node name="ShootSound2D" parent="ShootComponent" index="1"]
stream = null

[node name="PlayerDetectorComponent" parent="." index="3" instance=ExtResource( 6 )]

[node name="Sprite" parent="." index="5"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" parent="." index="6"]
shape = SubResource( 1 )

[editable path="ShootComponent"]
